--- a/src/goal_pose_publisher/package.xml
+++ b/src/goal_pose_publisher/package.xml
@@ -10,6 +10,8 @@
   <depend>mediapipe</depend>
   <depend>numpy</depend>
   <depend>cv2</depend>
+  <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
