--- a/src/goal_pose_publisher/package.xml
+++ b/src/goal_pose_publisher/package.xml
@@ -12,6 +12,7 @@
   <depend>cv2</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
