--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,19 @@
 {
     "python.autoComplete.extraPaths": [
+        "/home/usama/robot_arms_teleop/install/robot_arms_teleop_interfaces/local/lib/python3.10/dist-packages",
         "/home/usama/robot_arms_teleop/build/robot_arm_model",
         "/home/usama/robot_arms_teleop/install/robot_arm_model/lib/python3.10/site-packages",
+        "/home/usama/robot_arms_teleop/build/goal_pose_publisher",
+        "/home/usama/robot_arms_teleop/install/goal_pose_publisher/lib/python3.10/site-packages",
         "/opt/ros/humble/lib/python3.10/site-packages",
         "/opt/ros/humble/local/lib/python3.10/dist-packages"
     ],
     "python.analysis.extraPaths": [
+        "/home/usama/robot_arms_teleop/install/robot_arms_teleop_interfaces/local/lib/python3.10/dist-packages",
         "/home/usama/robot_arms_teleop/build/robot_arm_model",
         "/home/usama/robot_arms_teleop/install/robot_arm_model/lib/python3.10/site-packages",
+        "/home/usama/robot_arms_teleop/build/goal_pose_publisher",
+        "/home/usama/robot_arms_teleop/install/goal_pose_publisher/lib/python3.10/site-packages",
         "/opt/ros/humble/lib/python3.10/site-packages",
         "/opt/ros/humble/local/lib/python3.10/dist-packages"
     ]
