--- a/src/motion_planning_moveit_config/config/moveit_controllers.yaml
+++ b/src/motion_planning_moveit_config/config/moveit_controllers.yaml
@@ -6,7 +6,8 @@ moveit_simple_controller_manager:
   controller_names:
     - left_gripper_controller
     - right_gripper_controller
-    - arms_controller
+    - left_arm_controller
+    - right_arm_controller
 
   left_gripper_controller:
     type: GripperCommand
@@ -20,7 +21,7 @@ moveit_simple_controller_manager:
       - right_6
     action_ns: gripper_cmd
     default: true
-  arms_controller:
+  left_arm_controller:
     type: FollowJointTrajectory
     joints:
       - left_1
@@ -28,10 +29,15 @@ moveit_simple_controller_manager:
       - left_3
       - left_4
       - left_5
+    action_ns: follow_joint_trajectory
+    default: true
+  right_arm_controller:
+    type: FollowJointTrajectory
+    joints:
       - right_1
       - right_2
       - right_3
       - right_4
       - right_5
     action_ns: follow_joint_trajectory
-    default: True
+    default: true
