--- a/src/motion_planning/package.xml
+++ b/src/motion_planning/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>motion_planning</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <description>TODO: Package description</description>
   <maintainer email="usamasattar.3347@gmail.com">usama</maintainer>
   <license>Apache-2.0</license>
@@ -11,6 +11,8 @@
 
   <depend>moveit_ros_planning_interface</depend>
   <depend>rclcpp</depend>
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
