--- a/src/panda_moveit_config/package.xml
+++ b/src/panda_moveit_config/package.xml
@@ -4,7 +4,7 @@
   <name>panda_moveit_config</name>
   <version>0.3.0</version>
   <description>
-     An automatically generated package with all the configuration and launch files for using the panda with the MoveIt Motion Planning Framework
+     An automatically generated package with all the configuration and launch files for using the panda with the MoveIt Motion Planning Framework in robot_arms_teleop project
   </description>
   <maintainer email="usamasattar.3347@gmail.com">Usama Sattar</maintainer>
 
