--- a/src/motion_planning/package.xml
+++ b/src/motion_planning/package.xml
@@ -3,8 +3,8 @@
 <package format="3">
   <name>motion_planning</name>
   <version>0.0.1</version>
-  <description>TODO: Package description</description>
-  <maintainer email="usamasattar.3347@gmail.com">usama</maintainer>
+  <description>Motion planning package using MoveIt2 for robot_arms_teleop project</description>
+  <maintainer email="usamasattar.3347@gmail.com">Usama Sattar</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
@@ -13,6 +13,7 @@
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>robot_arms_teleop_interfaces</depend>
   
   <exec_depend>ros2launch</exec_depend>
 
