--- a/src/robot_arm_model/package.xml
+++ b/src/robot_arm_model/package.xml
@@ -3,8 +3,8 @@
 <package format="3">
   <name>robot_arm_model</name>
   <version>0.0.1</version>
-  <description>A dual-robot arm simulation teleoperated throguh camera feed</description>
-  <maintainer email="usamasattar.3347@gmail.com">usama</maintainer>
+  <description>Model and rviz2 view for robot_arms_teleop project</description>
+  <maintainer email="usamasattar.3347@gmail.com">Usama Sattar</maintainer>
   <license>Apache-2.0</license>
 
   <depend>rclpy</depend>
